--- a/src/cabinets.Core/Pages/Auth/TwoButtonPage.xaml
+++ b/src/cabinets.Core/Pages/Auth/TwoButtonPage.xaml
@@ -13,9 +13,9 @@
         <!--Страница после регистрации-->
         <StackLayout VerticalOptions="Center" Margin="15,0" Spacing="0">
             <Button Text="Выбрать кабинет" Style="{StaticResource ButtonTransparent}" Margin="0,10"
-                    Command="{Binding OpenCabinetsCommand}" />
+                    Command="{Binding OpenCabinetsCommand}" FontSize="Medium"/>
             <Button Text="Выбрать дату и время" Style="{StaticResource ButtonTransparent}"
-                    Command="{Binding OpenCalendarCommand}" />
+                    Command="{Binding OpenCalendarCommand}"  FontSize="Medium"/>
         </StackLayout>
     </ContentPage.Content>
 </views:MvxContentPage>
