--- a/src/cabinets.Core/Pages/Cabinets/CabinetsDetailPage.xaml
+++ b/src/cabinets.Core/Pages/Cabinets/CabinetsDetailPage.xaml
@@ -9,8 +9,12 @@
                       xmlns:cabinets="clr-namespace:cabinets.Core.ViewModels.Cabinets;assembly=cabinets.Core"
                       xmlns:contentViews="clr-namespace:cabinets.Core.ContentViews;assembly=cabinets.Core"
                       mc:Ignorable="d"
-                      x:Class="cabinets.Core.Pages.Cabinets.CabinetsDetailPage"
-                      Title="{Binding Cabinet.Name}">
+                      x:Class="cabinets.Core.Pages.Cabinets.CabinetsDetailPage">
+
+    <NavigationPage.TitleView>
+        <Label Text="{Binding Cabinet.Name}" Style="{StaticResource TitleLabel}"/>
+    </NavigationPage.TitleView>
+
     <ContentPage.Content>
         <!--Детальная страница кабинета-->
         <ScrollView Margin="15,10" VerticalScrollBarVisibility="Never">
@@ -50,7 +54,7 @@
                         </Label.FormattedText>
                     </Label>
                 </StackLayout>
-                <Label Text="{Binding Cabinet.Description}" TextColor="#505050" FontSize="12" />
+                <Label Text="{Binding Cabinet.Description}" FontSize="Caption" />
                 <StackLayout Spacing="0">
                     <Button Text="Выбрать дату и время" Margin="0,10" Style="{StaticResource ButtonBlur}"
                             Command="{Binding OpenBookingCommand}" />
