--- a/src/cabinets.Core/Pages/News/NewsPage.xaml
+++ b/src/cabinets.Core/Pages/News/NewsPage.xaml
@@ -9,8 +9,12 @@
                       xmlns:news="clr-namespace:cabinets.Core.ViewModels.News;assembly=cabinets.Core"
                       mc:Ignorable="d"
                       x:Class="cabinets.Core.Pages.News.NewsPage"
-                      d:NavigationPage.HasNavigationBar="True"
                       Title="Новости">
+
+    <NavigationPage.TitleView>
+        <Label Text="Новости" Style="{StaticResource TitleLabel}"/>
+    </NavigationPage.TitleView>
+
     <views:MvxContentPage.IconImageSource>
         <OnPlatform x:TypeArguments="ImageSource">
             <On Platform="iOS" Value="outline_description_black_24pt_1x.png" />
