--- a/src/cabinets.Core/Views/NewsViewCell.xaml
+++ b/src/cabinets.Core/Views/NewsViewCell.xaml
@@ -8,20 +8,22 @@
           x:Class="cabinets.Views.NewsViewCell">
     <ViewCell.View>
         <!--Ячейка представления для списка новостей-->
-        <Grid BackgroundColor="White" ColumnSpacing="15" Margin="0,5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Image Grid.Column="0" Margin="5" Source="{Binding Image}" WidthRequest="75" HeightRequest="75" />
-            <StackLayout Grid.Column="1" Spacing="0" VerticalOptions="Center">
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="{Binding Title}" FontSize="12" TextColor="#505050" />
-                    <Label Text="{Binding Date}" FontSize="10" HorizontalOptions="EndAndExpand" Margin="0,0,10,0" />
+        <Frame Padding="5" Margin="0,5,0,0" HeightRequest="85">
+            <Grid BackgroundColor="White" ColumnSpacing="15">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Image Grid.Column="0" Margin="5" Source="{Binding Image}" WidthRequest="75" HeightRequest="75" />
+                <StackLayout Grid.Column="1" Spacing="0" VerticalOptions="Center">
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="{Binding Title}" FontSize="Caption" TextColor="#505050" />
+                        <Label Text="{Binding Date}" FontSize="Micro" HorizontalOptions="EndAndExpand" Margin="0,0,10,0" />
+                    </StackLayout>
+                    <Label Text="{Binding DetailText}" FontSize="Micro" TextColor="#505050" Margin="0,0,25,0" MaxLines="4"
+                           LineBreakMode="TailTruncation" />
                 </StackLayout>
-                <Label Text="{Binding DetailText}" FontSize="10" TextColor="#505050" Margin="0,0,25,0" MaxLines="4"
-                       LineBreakMode="TailTruncation" />
-            </StackLayout>
-        </Grid>
+            </Grid>
+        </Frame>
     </ViewCell.View>
 </ViewCell>
